tests: new integration tests added & refactor in unity tests